<resources>
    <string name="app_name">Stikeros</string>
    <string name="sticker">sticker</string>
    <string name="create_sticker">Create Sticker</string>
    <string name="create_sticker_pack">Create Sticker Pack</string>
    <string name="share_sticker_pack">Share Sticker Pack</string>
    <string name="permission_rationale">App requires storage permission for saving stickers</string>
    <string name="provide_permission">Provide permission</string>
    <string name="save_sticker">Save Sticker</string>
    <string name="undo">Undo</string>
    <string name="set_previous_emoji">Set previous emoji</string>
    <string name="set_next_emoji">Set next emoji</string>
    <string name="sticker_preview">Sticker preview</string>
    <string name="sticker_pack_name">Sticker Pack Name</string>
    <string name="save_sticker_pack">Save Sticker Pack</string>
    <string name="share_description">Click on sticker pack for sharing it on Telegram</string>
</resources>