<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_create_sticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_sticker" />

        <Button
            android:id="@+id/btn_create_sticker_pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_sticker_pack" />

        <Button
            android:id="@+id/btn_share_sticker_pack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_sticker_pack" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/permission_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_permission_rationale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_rationale" />

        <Button
            android:id="@+id/btn_provide_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provide_permission" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>